--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "storybook": "start-storybook -p 6006 -c .storybook"
+    "storybook": "start-storybook -p 6006 -c .storybook",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
@@ -12,6 +13,7 @@
     "@storybook/addon-info": "^4.0.12",
     "@storybook/addon-knobs": "^4.0.12",
     "@storybook/react": "^4.0.12",
+    "@storybook/storybook-deployer": "^2.8.1",
     "@types/react": "^16.7.13",
     "awesome-typescript-loader": "^5.2.1",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
